# server/docs/swagger.json
@@ -217,17 +217,14 @@
                                         "dates": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
+                                                "$ref": "#/definitions/primitive.DateTime"
                                             }
                                         },
-                                        "endTime": {
+                                        "duration": {
                                             "type": "number"
                                         },
                                         "name": {
                                             "type": "string"
-                                        },
-                                        "startTime": {
-                                            "type": "number"
                                         }
                                     }
                                 }
@@ -316,17 +313,14 @@
                                         "dates": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
+                                                "$ref": "#/definitions/primitive.DateTime"
                                             }
                                         },
-                                        "endTime": {
+                                        "duration": {
                                             "type": "number"
                                         },
                                         "name": {
                                             "type": "string"
-                                        },
-                                        "startTime": {
-                                            "type": "number"
                                         }
                                     }
                                 }
@@ -404,6 +398,62 @@
                                         },
                                         "name": {
                                             "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {}
+                }
+            }
+        },
+        "/events/{eventId}/schedule": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "events"
+                ],
+                "summary": "Schedules an event on the user's google calendar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Event ID",
+                        "name": "eventId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Object containing info about the event to schedule",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "type": "object"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "attendeeEmails": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "endDate": {
+                                            "$ref": "#/definitions/primitive.DateTime"
+                                        },
+                                        "startDate": {
+                                            "$ref": "#/definitions/primitive.DateTime"
                                         }
                                     }
                                 }
@@ -694,6 +744,20 @@
                 }
             }
         },
+        "/user": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Deletes the currently signed in user",
+                "responses": {
+                    "200": {}
+                }
+            }
+        },
         "/user/calendar": {
             "get": {
                 "description": "Gets the user's calendar events between \"timeMin\" and \"timeMax\"",
@@ -793,6 +857,37 @@
                 }
             }
         },
+        "/user/searchContacts": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Searches the user's contacts based on the given query",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Query to search for",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UserProfile"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/visibility": {
             "post": {
                 "consumes": [
@@ -870,10 +965,12 @@
             "type": "object",
             "properties": {
                 "endDate": {
-                    "type": "string"
+                    "type": "object",
+                    "$ref": "#/definitions/primitive.DateTime"
                 },
                 "startDate": {
-                    "type": "string"
+                    "type": "object",
+                    "$ref": "#/definitions/primitive.DateTime"
                 },
                 "summary": {
                     "type": "string"
@@ -886,20 +983,23 @@
                 "_id": {
                     "type": "string"
                 },
+                "calendarEventId": {
+                    "type": "string"
+                },
                 "dates": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/primitive.DateTime"
                     }
                 },
-                "endDate": {
-                    "type": "string"
-                },
-                "endTime": {
+                "duration": {
                     "type": "number"
                 },
                 "name": {
                     "type": "string"
+                },
+                "notificationsEnabled": {
+                    "type": "boolean"
                 },
                 "ownerId": {
                     "type": "string"
@@ -911,12 +1011,10 @@
                         "$ref": "#/definitions/models.Response"
                     }
                 },
-                "startDate": {
-                    "type": "string"
-                },
-                "startTime": {
-                    "description": "StartTime and EndTime are UTC hours, dates are an array of utc dates",
-                    "type": "number"
+                "scheduledEvent": {
+                    "description": "Scheduled event",
+                    "type": "object",
+                    "$ref": "#/definitions/models.CalendarEvent"
                 }
             }
         },
@@ -927,7 +1025,8 @@
                     "type": "string"
                 },
                 "createdAt": {
-                    "type": "string"
+                    "type": "object",
+                    "$ref": "#/definitions/primitive.DateTime"
                 },
                 "from": {
                     "type": "string"
@@ -1017,6 +1116,9 @@
         },
         "models.UserStatus": {
             "type": "string"
+        },
+        "primitive.DateTime": {
+            "type": "integer"
         },
         "responses.Error": {
             "type": "object",
